--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -36,7 +36,9 @@
 
     .header__logo-img {
         position: absolute;
-        top: 4px;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
         height: 70px;
     }
 
@@ -182,7 +184,7 @@
     }
     
     .footer__logo-img {
-        width: 50%;
+        width: 80%;
         margin: 0 auto;
     }
 
